# canvasxpress-dashboards

./: .gitignore  LICENSE  README.md  package.json
examples/: builder.html  sales-live-demo.html  sales-live.spec.json  sales-overview.html  sales-overview.spec.json  serve.py
schema/: dashboard.schema.json
scripts/: build.mjs
server/: README.md  pyproject.toml
server/src/cxd_server/: __init__.py  app.py  datasets.py  gdrivestore.py  objectstore.py  s3store.py  sqldashboard.py  sqlstore.py  store.py  stores.py
server/src/cxd_server/static/: canvasxpress-dashboards.umd.js  shared.html
server/tests/: fake_drive.py  fake_s3.py  test_app.py  test_datasets.py  test_gdrive.py  test_objectstore.py  test_store.py  test_stores.py
src/: builder.js  builderModel.js  dataStore.js  gridLayout.js  index.js  persistence.js  renderDashboard.js  styles.js  validateSpec.js
tests/: builder.test.js  builderModel.test.js  dataStore.test.js  gridLayout.test.js  persistence.test.js  renderDashboard.test.js  validateSpec.test.js
tests/helpers/: dom-stub.js
